[ master ] - fixed the modeline and color theme

--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -2325,6 +2325,84 @@ A tree layout file explorer for Emacs.
 #+END_SRC
 
 
+** Important! Improve ~C-j~ and ~C-k~ for the modes I needed
+
+**** Disable ~C-j~ and ~C-k~ from the following modes
+
+#+BEGIN_SRC emacs-lisp
+  (dolist (map (list
+                global-map
+                evil-window-map
+                evil-normal-state-map
+                evil-motion-state-map
+                ))
+      (define-key map (kbd "C-j") nil)
+      (define-key map (kbd "C-k") nil)
+      ;;(message "State: %s" state);
+  )
+
+  (evil-define-key 'normal org-mode-map (kbd "C-j") nil)
+  (evil-define-key 'normal org-mode-map (kbd "C-k") nil)
+#+END_SRC
+
+
+**** Enable ~C-j~ and ~C-k~ for the following modes
+
+#+BEGIN_SRC emacs-lisp
+  (dolist (map (list
+                vertico-map
+                ))
+    (define-key map (kbd "C-j") 'vertico-next)
+    (define-key map (kbd "C-k") 'vertico-previous)
+  )
+
+  ;;
+  ;; 'org-mode'
+  ;;
+  (defun my-org-next-heading()
+    (interactive)
+    (org-forward-heading-same-level nil)
+    (evil-scroll-line-to-center nil)
+  )
+
+  (defun my-org-previous-heading()
+    (interactive)
+    (org-backward-heading-same-level nil)
+    (evil-scroll-line-to-center nil)
+  )
+
+  (evil-define-key 'normal org-mode-map (kbd "C-j") 'my-org-next-heading)
+  (evil-define-key 'normal org-mode-map (kbd "C-k") 'my-org-previous-heading)
+
+  ;;
+  ;; Bind to the local buffer keymap against the following delay modes
+  ;;
+  (defun my-markdown-next-heading()
+    (interactive)
+    (outline-next-visible-heading 1)
+    (evil-scroll-line-to-center nil)
+  )
+
+  (defun my-markdown-previous-heading()
+    (interactive)
+    (outline-next-visible-heading -1)
+    (evil-scroll-line-to-center nil)
+  )
+
+  (defun my-bind-markdown-heading-jumping-local()
+    (define-key evil-normal-state-local-map (kbd "C-j") 'my-markdown-next-heading)
+    (define-key evil-normal-state-local-map (kbd "C-k") 'my-markdown-previous-heading)
+  )
+
+  (dolist (hook '(
+                 markdown-mode-hook
+                 markdown-view-mode-hook
+                 ))
+    (add-hook hook #'my-bind-markdown-heading-jumping-local)
+  )
+#+END_SRC
+
+
 ** =eglot= LSP support
 
 =Emacs Polyglot= is the built-in Emacs LSP client.
@@ -2957,9 +3035,9 @@ This package includes a lot of color themes.
             doom-themes-enable-italic t) ; if nil, italics is universally disabled
 
       ;; Load theme, pick the one you like
-      (load-theme 'doom-gruvbox t)
+      ;; (load-theme 'doom-gruvbox t)
       ;;(load-theme 'doom-nord-aurora t)
-      ;;(load-theme 'doom-one t)
+      (load-theme 'doom-one t)
       ;;(load-theme 'doom-solarized-dark t)
       ;;(load-theme 'doom-solarized-light t)
       ;;(load-theme 'doom-pine t)
@@ -3120,6 +3198,20 @@ Here are some useful functions you will use to customize your ~mode-line-format~
 
 
 
+**** +Fion colors+
+
+#+BEGIN_SRC emacs-lisp
+
+  (set-face-attribute 'mode-line-active nil :background "systemGreenColor")
+  ;; Function name
+  (set-face-attribute 'font-lock-function-name-face nil :foreground "#2AA198" :weight 'bold)
+  ;; docstring
+  (set-face-attribute 'font-lock-doc-face nil :foreground "#96A7A9" :weight 'normal)
+  ;; comment
+  (set-face-attribute 'font-lock-comment-delimiter-face nil :weight 'normal)
+  (set-face-attribute 'font-lock-comment-face nil :weight 'normal)
+#+END_SRC
+
 **** My ~mode-line-format~ settings
 
 Read the comment carefully to understand how it works:
@@ -3143,10 +3235,10 @@ Read the comment carefully to understand how it works:
 
 
   ;; -------------------------------------------------------------------------------
-  ;; Override the default face for change mode line backgroundW
+  ;; Override the default face for change mode line background
   ;; -------------------------------------------------------------------------------
-  (set-face-attribute 'mode-line-active nil :background "#2F2F2F")
-  (set-face-attribute 'mode-line-inactive nil :background "#e4e5e4")
+  (set-face-attribute 'mode-line-active nil :background "#31033d")
+  (set-face-attribute 'mode-line-inactive nil :background "#322f33")
 
 
   ;; -------------------------------------------------------------------------------
@@ -3410,20 +3502,6 @@ Take the =org-level-1= as an example:
      (use-package rainbow-mode)
    #+END_SRC
 
-
-*** Fion colors
-
-#+BEGIN_SRC emacs-lisp
-
-  (set-face-attribute 'mode-line-active nil :background "systemGreenColor")
-  ;; Function name
-  (set-face-attribute 'font-lock-function-name-face nil :foreground "#2AA198" :weight 'bold)
-  ;; docstring
-  (set-face-attribute 'font-lock-doc-face nil :foreground "#96A7A9" :weight 'normal)
-  ;; comment
-  (set-face-attribute 'font-lock-comment-delimiter-face nil :weight 'normal)
-  (set-face-attribute 'font-lock-comment-face nil :weight 'normal)
-#+END_SRC
 
 
 ** =org-roam=
@@ -3953,7 +4031,7 @@ As a workaround, I can use the default evil keybinding =m= to set a =M= to curre
 #+END_SRC
 
 
-** Window jumping movement by ~C-h, C-l, C-j, C-k~ 
+** Window jumping movement by ~C-h, C-l~
 
 For jumping between up and down windows, I prefer to use ~C-w j~ and ~C-w k~.
 
@@ -3963,8 +4041,8 @@ For jumping between up and down windows, I prefer to use ~C-w j~ and ~C-w k~.
                 ))
     (define-key map (kbd "C-l") 'evil-window-right)
     (define-key map (kbd "C-h") 'evil-window-left)
-    (define-key map (kbd "C-j") 'evil-window-down)
-    (define-key map (kbd "C-k") 'evil-window-up)
+   ;; (define-key map (kbd "C-j") 'evil-window-down)
+   ;; (define-key map (kbd "C-k") 'evil-window-up)
     ;;(message "State: %s" state);
   )
 #+END_SRC
