--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -2077,6 +2077,7 @@ If you can't find the language gammar in =https://github.com/tree-sitter/tree-si
   (add-to-list 'auto-mode-alist '("\\.clang-format\\'" . bash-mode))
   (add-to-list 'auto-mode-alist '("\\.json\\'" . json-ts-mode))
   (add-to-list 'auto-mode-alist '("\\.ts\\'" . typescript-ts-mode))
+  (add-to-list 'auto-mode-alist '("\\.js\\'" . js-ts-mode))
   (add-to-list 'auto-mode-alist '("\\.tsx\\'" . typescript-ts-mode))
   (add-to-list 'auto-mode-alist '("\\.java\\'" . java-ts-mode))
 
@@ -2483,6 +2484,22 @@ Before you can active =eglot=, you have to install your language server separate
 #+END_SRC
 
 
+**** =typescript language server=
+
+By default, it supports the filetypes below:
+
+- javascript
+- javascriptreact
+- javascript.jsx
+- typescript
+- typescriptreact
+- typescript.tsx
+
+#+BEGIN_SRC bash
+    npm install -g typescript typescript-language-server
+#+END_SRC
+
+
 *** Setup langauge server list (optional)
 
 ~eglot-server-programs~ is the variable that use to list all relationships between =mode= and =language server.
@@ -2667,6 +2684,22 @@ Here is the way to set the default style via the hook:
       (setq tab-width 4)
       (message ">>> my-emacs-lisp-style-settings [done]")
   )
+  ;;
+  ;; 
+  ;;
+  (defun my-js-ts-style-settings()
+      ;;
+      ;; Very important to reset!!!
+      ;;
+      (setq tab-width my-tab-width)                
+
+      ;;
+      ;; Back to normal TAB behavior rather than 'indent-for-tab-command' 
+      ;;
+      (define-key evil-insert-state-local-map (kbd "TAB") 'tab-to-tab-stop)
+
+      (message ">>> my-js-ts-style-settings [done]")
+  )
 
   (add-hook 'c-mode-hook #'my-c-style-settings)
   (add-hook 'c-ts-mode-hook #'my-c-style-settings)
@@ -2676,7 +2709,8 @@ Here is the way to set the default style via the hook:
   (add-hook 'python-ts-mode-hook #'my-c-style-settings)
   (add-hook 'emacs-lisp-mode-hook #'my-emacs-lisp-style-settings)
   (add-hook 'cmake-ts-mode-hook #'my-c-style-settings)
-  (add-hook 'typescript-ts-mode-hook #'my-c-style-settings)
+  (add-hook 'typescript-ts-mode-hook #'my-js-ts-style-settings)
+  (add-hook 'js-ts-mode-hook #'my-js-ts-style-settings)
   (add-hook 'java-ts-mode-hook #'my-c-style-settings)
 #+END_SRC
 
@@ -2699,7 +2733,7 @@ Here is the way to start =eglot= automatically:
                   zig-mode-hook
                   python-ts-mode-hook 
                   cmake-ts-mode-hook
-                  javascript-ts-mode-hook
+                  js-ts-mode-hook
                   typescript-ts-mode-hook
                   java-ts-mode-hook
                   ))
@@ -4921,6 +4955,7 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
                   rust-mode-hook
                   rust-ts-mode-hook
                   typescript-ts-mode-hook
+                  js-ts-mode-hook
                   python-ts-mode-hook
                   java-ts-mode-hook
                   ))
