[ master ] - Add python lsp and change Dired keybinding

--- a/emacs-250913/configuration.org
+++ b/emacs-250913/configuration.org
@@ -3502,6 +3502,14 @@ For example, download the latest version: ~jdt-language-server-1.9.0-20220303153
    Just add =java-lsp-server/bin= to your =$PATH= environment var.
 
 
+**** =Python=
+
+#+BEGIN_SRC bash
+  pip install python-lsp-server
+  pip install --upgrade autopep8 
+#+END_SRC
+
+
 *** Setup langauge server list (optional)
 
 ~eglot-server-programs~ is the variable that use to list all relationships between =mode= and =language server=.
@@ -3822,6 +3830,7 @@ Here is the way to set the default style via the hook:
   (add-hook 'typescript-ts-mode-hook #'my-js-ts-style-settings)
   (add-hook 'js-ts-mode-hook #'my-js-ts-style-settings)
   (add-hook 'java-ts-mode-hook #'my-js-ts-style-settings)
+  (add-hook 'python-ts-mode-hook #'my-c-style-settings)
 #+END_SRC
 
 
@@ -3846,6 +3855,7 @@ Here is the way to start =eglot= automatically:
                   typescript-ts-mode-hook
                   java-ts-mode-hook
                   odin-ts-mode-hook
+                  python-ts-mode-hook 
                   ))
      (add-hook hook #'start-eglot)
   )
@@ -4677,7 +4687,7 @@ That's why you better to load theme by using the ~after-init-hook~ to make sure 
   	;; 'after-init-hook
   	(lambda ()
   		(let (
-  				;; (theme 'ef-cyprus)
+  				(theme 'ef-cyprus)
   				;; (theme 'ef-melissa-light)
   				;; (theme 'ef-melissa-dark)
   				;; (theme 'ef-elea-dark)
@@ -4688,7 +4698,7 @@ That's why you better to load theme by using the ~after-init-hook~ to make sure 
   				;; (theme 'doom-plain-dark)
   				;; (theme 'doom-plain)
   				;; (theme 'doom-nord)
-  				(theme 'doom-nord-aurora)
+  				;; (theme 'doom-nord-aurora)
   				;; (theme 'doom-lantern)
   				;; (theme 'doom-pine)
   				;; (theme 'doom-horizon)
@@ -7113,6 +7123,7 @@ To solve this issue, the more practical way to set your own bindings is to follo
   		emacs-lisp-compilation-mode-hook
   		snippet-mode-hook
   		prog-mode-hook
+  		text-mode-hook
   		;; c-mode-hook
   		;; c-ts-mode-hook
   		;; c++-mode-hook
@@ -7379,6 +7390,7 @@ I regret the following way, as I think the default ~consult-imenu~ is still bett
                   typescript-ts-mode-hook
                   js-ts-mode-hook
                   java-ts-mode-hook
+                  python-ts-mode-hook
                   ))
   	(add-hook hook #'my-lsp-bindings)
   )
@@ -7552,15 +7564,10 @@ I regret the following way, as I think the default ~consult-imenu~ is still bett
   ;; (defun my-dired-sort-by-directory ()	(interactive) (dired-sort-other "-l --group-directories-first"))
 
   (defun my-goto-home-directory()			(interactive) (dired "~/"))
-  (defun my-goto-shell-backup-directory()	(interactive) (dired "~/my-shell/backup"))
-  (defun my-goto-c-directory()			(interactive) (dired "~/c"))
+  (defun my-goto-desktop-directory()		(interactive) (dired "~/Desktop"))
+  (defun my-goto-sbzi-directory()			(interactive) (dired "~/sbzi"))
   (defun my-goto-emacs-directory()		(interactive) (dired "~/.config/emacs"))
   (defun my-goto-downloads-directory()	(interactive) (dired "~/Downloads"))
-  (defun my-goto-rust-directory()			(interactive) (dired "~/rust"))
-  (defun my-goto-zig-directory()			(interactive) (dired "~/zig"))
-  (defun my-goto-odin-directory()			(interactive) (dired "~/odin"))
-  (defun my-goto-temp-directory()			(interactive) (dired "~/temp"))
-  (defun my-goto-photo-directory()		(interactive) (dired "~/Photos"))
 
   (defun my-dired-add-file-or-directory ()
 
@@ -7692,26 +7699,14 @@ I regret the following way, as I think the default ~consult-imenu~ is still bett
   	;; Quickly go to particular directories by 'gX'
   	;;
   	;; - 'gh': Go home       '~/'
-  	;; - 'gb': Go backup     '~/my-shell/backup'
-  	;; - 'gc': Go c          '~/c'
-  	;; - 'gd': Go downloads  '~/Downloads'
+  	;; - 'gd': Go Desktop    '~/Desktop'
+  	;; - 'gs': Go sbzi       '~/sbzi'
   	;; - 'ge': Go Emacs      '~/.config/emacs'
-  	;; - 'gp': Go Photos     '~/Photos'
-  	;; - 'gr': Go Rust       '~/rust'
-  	;; - 'gt': Go temp       '~/temp'
-  	;; - 'gz': Go zig        '~/zig'
-  	;; - 'go': Go zig        '~/odin'
   	;;
   	(keymap-set map "g h" 'my-goto-home-directory)
-  	(keymap-set map "g b" 'my-goto-shell-backup-directory)
-  	(keymap-set map "g d" 'my-goto-downloads-directory)
-  	(keymap-set map "g c" 'my-goto-c-directory)
+  	(keymap-set map "g d" 'my-goto-desktop-directory)
+  	(keymap-set map "g s" 'my-goto-sbzi-directory)
   	(keymap-set map "g e" 'my-goto-emacs-directory)
-  	(keymap-set map "g p" 'my-goto-photo-directory)
-  	(keymap-set map "g r" 'my-goto-rust-directory)
-  	(keymap-set map "g t" 'my-goto-temp-directory)
-  	(keymap-set map "g z" 'my-goto-zig-directory)
-  	(keymap-set map "g z" 'my-goto-odin-directory)
 
   	;;
   	;; Modify the READ-ONLY buffer by '<leader>m'
